--- a/angular.json
+++ b/angular.json
@@ -3,31 +3,32 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "module-exclude": {
+    "sensfrontend": {
       "projectType": "application",
       "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
-        "build": {
+        "sensgear-build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/module-exclude",
+            "outputPath": "dist/sensgear",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": false,
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/styles.css"],
             "scripts": []
           },
+          "fileReplacements": [
+            {
+              "replace": "src/environments/environment.ts",
+              "with": "src/environments/sensgear/environment.ts"
+            }
+          ],
           "configurations": {
             "production": {
               "fileReplacements": [
@@ -55,21 +56,33 @@
             }
           }
         },
-        "serve": {
+
+        "sensgear-serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "module-exclude:build"
+            "browserTarget": "sensfrontend:sensgear-build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "module-exclude:build:production"
+              "browserTarget": "sensfrontend:sensgear-build:production"
+            }
+          }
+        },
+        "sensformer-serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "sensfrontend:sensformer-build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "sensfrontend:sensformer-build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "module-exclude:build"
+            "browserTarget": "sensfrontend:build"
           }
         },
         "test": {
@@ -79,13 +92,8 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.css"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/styles.css"],
             "scripts": []
           }
         },
@@ -97,24 +105,23 @@
               "tsconfig.spec.json",
               "e2e/tsconfig.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         },
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "module-exclude:serve"
+            "devServerTarget": "sensfrontend:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "module-exclude:serve:production"
+              "devServerTarget": "sensfrontend:serve:production"
             }
           }
         }
       }
-    }},
-  "defaultProject": "module-exclude"
+    }
+  },
+  "defaultProject": "sensfrontend"
 }
