--- a/angular.json
+++ b/angular.json
@@ -3,17 +3,17 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "sensfrontend": {
+    "tensProducts": {
       "projectType": "application",
       "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
-        "sensgear-build": {
+        "tensgear-build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/sensgear",
+            "outputPath": "dist/tensgear",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -21,20 +21,66 @@
             "aot": false,
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": ["src/styles.css"],
-            "scripts": []
+            "scripts": [],
+            "fileReplacements": [
+              {
+                "replace": "src/environments/environment.ts",
+                "with": "src/environments/Tensgear/environment-dev.ts"
+              }
+            ]
           },
-          "fileReplacements": [
-            {
-              "replace": "src/environments/environment.ts",
-              "with": "src/environments/sensgear/environment.ts"
-            }
-          ],
           "configurations": {
             "production": {
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
+                  "with": "src/environments/Tensgear/environment.prod.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                }
+              ]
+            }
+          }
+        },
+        "tensformer-build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/tensformer",
+            "index": "src/index.html",
+            "main": "src/main.ts",
+            "polyfills": "src/polyfills.ts",
+            "tsConfig": "tsconfig.app.json",
+            "aot": false,
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/styles.css"],
+            "scripts": [],
+            "fileReplacements": [
+              {
+                "replace": "src/environments/environment.ts",
+                "with": "src/environments/Tensformer/environment-dev.ts"
+              }
+            ]
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/Tensformer/environment.prod.ts"
                 }
               ],
               "optimization": true,
@@ -57,32 +103,32 @@
           }
         },
 
-        "sensgear-serve": {
+        "tensgear-serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "sensfrontend:sensgear-build"
+            "browserTarget": "tensProducts:tensgear-build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "sensfrontend:sensgear-build:production"
+              "browserTarget": "tensProducts:tensgear-build:production"
             }
           }
         },
-        "sensformer-serve": {
+        "tensformer-serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "sensfrontend:sensformer-build"
+            "browserTarget": "tensProducts:tensformer-build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "sensfrontend:sensformer-build:production"
+              "browserTarget": "tensProducts:tensformer-build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "sensfrontend:build"
+            "browserTarget": "tensProducts:build"
           }
         },
         "test": {
@@ -112,16 +158,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "sensfrontend:serve"
+            "devServerTarget": "tensProducts:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "sensfrontend:serve:production"
+              "devServerTarget": "tensProducts:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "sensfrontend"
+  "defaultProject": "tensProducts"
 }
